--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.12.0",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^16.12.0",
+    "react-image": "^2.4.0",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
